# boulderwelt-scraper

./: .gitignore  Cargo.toml  README.md  schema.sql  wrangler.toml
src/: lib.rs
src/db/: mod.rs
src/handlers/: daily_averages_template.rs  graph_template.rs  mod.rs  scheduled.rs  time_averages_template.rs
src/scraper/: mod.rs
src/utils/: mod.rs
