[package]
name = "scraper"
version = "0.1.0"
edition = "2021"
authors = [ "Alexander <alex@pluoi.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]
wee_alloc = []

[dependencies]
worker = { version="0.5.0", features = ["d1"] }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
scraper = "0.23.1"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"